--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,59 @@
-numpy==1.19.2
+altair==5.3.0
+astor==0.8.1
+attrs==24.2.0
+base58==2.1.1
+blinker==1.8.2
+boto3==1.34.155
+botocore==1.34.155
+cachetools==5.4.0
+certifi==2024.7.4
+chardet==3.0.4
+charset-normalizer==3.3.2
+click==8.0.4
+contourpy==1.2.1
+cycler==0.12.1
+enum-compat==0.0.3
+filelock==3.15.4
+fonttools==4.53.1
+fsspec==2024.6.1
+gitdb==4.0.11
+GitPython==3.1.43
+idna==2.10
+Jinja2==3.1.4
+jmespath==1.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.9.1.post1
+mpmath==1.3.0
+networkx==3.3
+numpy==2.0.1
+packaging==24.1
+pandas==2.2.2
+pillow==10.4.0
+protobuf==3.20.0
+pyarrow==17.0.0
+pydeck==0.9.1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+referencing==0.35.1
+requests==2.24.0
+rpds-py==0.20.0
+s3transfer==0.10.2
+six==1.16.0
+smmap==5.0.1
 streamlit==0.71.0
-torchvision==0.8.1
-matplotlib==3.3.3
-pandas==1.1.3
-Pillow==8.0.1
-
-requests~=2.24.0
+sympy==1.13.1
+toml==0.10.2
+toolz==0.12.1
+torch==2.4.0
+torchvision==0.19.0
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
+urllib3==1.25.11
+validators==0.33.0
+watchdog==4.0.1
