--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 distro==1.9.0
 docstring_parser==0.16
+einops==0.8.0
 exceptiongroup==1.2.2
 executing==2.0.1
 fastjsonschema==2.20.0
@@ -150,12 +151,14 @@ pyzmq==26.1.0
 qtconsole==5.5.2
 QtPy==2.4.1
 referencing==0.35.1
+regex==2024.7.24
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
 rpds-py==0.20.0
 rsa==4.9
+safetensors==0.4.4
 scipy==1.13.1
 seaborn==0.13.2
 Send2Trash==1.8.3
@@ -170,8 +173,9 @@ streamlit==1.37.1
 sympy==1.13.1
 tenacity==8.5.0
 terminado==0.18.1
+timm==1.0.9
 tinycss2==1.3.0
-tokenizers==0.20.0
+tokenizers==0.19.1
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.1
@@ -180,6 +184,7 @@ torchvision==0.17.2
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
+transformers==4.44.2
 types-python-dateutil==2.9.0.20240316
 typing-inspect==0.9.0
 typing_extensions==4.12.2
