add: save cache to enhance perf

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ latest_picture/heatmap_uploaded.jpg
 latest_picture/latest_uploaded_photo_scored.jpg
 checkpoints/sabeco-internal-classification_efficientnet_b7.pth
 checkpoints/Florence-2-large
+latest_picture/*.jpg
