add feat: yolo_dense_detect

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ checkpoints/sabeco-internal-classification_efficientnet_b7.pth
 checkpoints/Florence-2-large
 # Ignore all files in the latest_picture directory
 #latest_picture/*
-
+*.DS_Store
 # But don't ignore the directory itself
 !latest_picture/
 
